<resources>
    <string name="app_name">Lagos Java Developers</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_detials">User Detials</string>
    <string name="username">Username</string>
    <string name="git_profile_url">GitHub Profile URL</string>
    <string name="user_name_full">%s</string>
    <string name="user_url_full">%s</string>
    <string name="user_name">moshTech</string>
    <string name="user_url">https://github.com/moshTech</string>
    <string name="state">lagos</string>
    <string name="lagos">lagos</string>
    <string name="osun">osun</string>
    <string name="oyo">oyo</string>
    <string name="abuja">abuja</string>
    <string name="ondo">ondo</string>

</resources>
